# spark-performance-optimization-playbook

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  bench_aqe.py  bench_broadcast_join.py  bench_caching.py  bench_comet.py  bench_deletion_vectors.py  bench_executor_tuning.py  bench_file_sizing.py  bench_liquid_clustering.py  bench_partition_pruning.py  bench_predicate_pushdown.py  bench_skew_handling.py  bench_storage_formats.py  bench_zorder.py  run_bench.py
compose/: docker-compose.yml
data/generators/: __init__.py  ecommerce.py
docs/: ARCHITECTURE.md  DECISION_TREE.md  LOCAL_DEVELOPMENT.md
infra/: README.md  emr.tf.example
scripts/: seed-data.sh
src/playbook/: __init__.py  benchmark.py  spark_session.py
tests/: conftest.py
tests/unit/: test_benchmark.py
